# big-data

./: .gitignore  STEPS.md  pyproject.toml
data/cropped/: 2015.xlsx  2016.xlsx  2017.xlsx  2018.xlsx  2019.xlsx  2020.xlsx  2021.xlsx  2022.xlsx  2023.xlsx  2024.xlsx
data/csv/: 2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv  2021.csv  2022.csv  2023.csv  2024.csv  all.csv
